crates/compiler/tests/parse_errors/lambda_arrow.elm
module Main exposing (..)

x =
    \a a
